--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
-    
+    <h1 class="h1-style"> Vezba 1 - SI 2020 - 197_2018 </h1>
 </body>
 </html>
